--- a/example-projects/refactors/cycler/0-script.html
+++ b/example-projects/refactors/cycler/0-script.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <title>cycler: script</title>
+  </head>
 
-<head>
-  <meta charset='utf8'>
-  <title>cycler: script</title>
+  <body>
+    <div id="user-interface">
+      <p id="current-number"></p>
+    </div>
 
-</head>
+    <script>
+      debugger;
+      const MIN = 0;
+      const MAX = 5;
+      let current = 0;
 
-<body>
+      const log = [current];
 
-  <div id='user-interface'>
-    <p id='current-number'></p>
-  </div>
-
-
-  <script>
-    const MIN = 0;
-    const MAX = 5;
-    let current = 0;
-
-    const log = [current];
-
-    const currentNumberEl = document.getElementById('current-number');
-    currentNumberEl.innerHTML = current;
-
-    currentNumberEl.addEventListener('click', () => {
-      if (current + 1 <= MAX) {
-        current += 1;
-      } else {
-        current = MIN;
-      };
+      const currentNumberEl = document.getElementById('current-number');
       currentNumberEl.innerHTML = current;
-      log.push(current);
-    });
 
-    currentNumberEl.addEventListener('contextmenu', () => {
-      console.log(log);
-    });
-  </script>
+      currentNumberEl.addEventListener('click', () => {
+        if (current + 1 <= MAX) {
+          current += 1;
+        } else {
+          current = MIN;
+        }
+        currentNumberEl.innerHTML = current;
+        log.push(current);
+      });
 
-</body>
-
+      currentNumberEl.addEventListener('contextmenu', () => {
+        console.log(log);
+      });
+    </script>
+  </body>
 </html>
